--- a/content/media/css/base.css
+++ b/content/media/css/base.css
@@ -410,7 +410,7 @@ body p code, body li code {
 /* Code styles
  * pygmentize -S native -f html
  */
-.highlight pre { background-color: #202020; margin-left: 0; }
+.codehilite pre { background-color: #202020; margin-left: 0; }
 .hll { background-color: #404040 }
 .c { color: #999999; font-style: italic } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
