--- a/layout/base.j2
+++ b/layout/base.j2
@@ -6,7 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=OFL+Sorts+Mill+Goudy+TT:regular,italic' rel='stylesheet' type='text/css'>
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Dan Carroll | Home</title>
+    <title>{{ author.name }} | {{ resource.meta.title }}</title>
     <link rel="alternate" type="application/rss+xml" title="Latest blog entries" href="/feeds/latest/" />
     <link rel="stylesheet" href="{{ media_url('css/aal.css') }}" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="{{ media_url('css/base.css') }}" type="text/css" media="screen" charset="utf-8" />
