--- a/layout/listing.j2
+++ b/layout/listing.j2
@@ -6,7 +6,7 @@
         {% for res in resource.node.walk_resources_sorted_by_time() %}
 {% if res.meta.listable %}
         <li>
-            <a href="{{ res.url }}">{{ res.meta.title }}</a>
+            <a href="{{ content_url(res.url) }}">{{ res.meta.title }}</a>
             <div class="bordertop"><span class="snip">{{ res.meta.description }}</span></div>
         </li>
 {% endif %}
