Add basic atom feed

--- a/layout/base.j2
+++ b/layout/base.j2
@@ -24,7 +24,7 @@
     <div id="header-container">    
         <div class="top group" id="header">
             <header>
-                <a href="/">dan carroll</a>
+                <a href="/">{{ author.name|lower }}</a>
             </header>
             
             <nav>
