Switch table to image; center images in posts

--- a/content/media/css/base.css
+++ b/content/media/css/base.css
@@ -1,5 +1,5 @@
 /*
-    CSS definitions for erunama.com
+    CSS definitions for dancarroll.org
 
     Highly modified version of a stylesheet by Steve Losh (stevelosh.com)
 */
@@ -16,6 +16,11 @@ div#main-wrap {
   margin-bottom: 2em;
 }
 div#content { /*width: 60em;*/ }
+
+div#content img {
+    margin: 0px auto;
+    display: block;
+}
 
 a {
   text-decoration: none;
