--- a/content/media/css/base.css
+++ b/content/media/css/base.css
@@ -356,6 +356,11 @@ margin-top: 10px;
     padding-top: 10px;
 }
 
+.symbols {
+    font-family: Segoe UI Symbol, Symbola;
+    color: #B31B1B;
+}
+
 /* Entry body */
 body h1, body h2, body h3, body h4, body h5, body h6 {
     font-family: 'OFL Sorts Mill Goudy TT', serif;
