--- a/layout/base.j2
+++ b/layout/base.j2
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=OFL+Sorts+Mill+Goudy+TT:regular,italic' rel='stylesheet' type='text/css'>
 
@@ -43,7 +42,7 @@
 
         <div class="footer">
             <p>&copy; Copyright 2013 by {{ author.name }}</p>
-            <p>:-)</p>
+	    <p class="symbols">&#9733;&#9733;&#9733;</p>
         </div>
     </div>
 
