--- a/content/media/css/base.css
+++ b/content/media/css/base.css
@@ -28,45 +28,12 @@ a {
 }
 a:hover { color: #B31B1B; }
 
-/*h1 a { color: #BFBF8A; }
-h1 a:hover {
-  color: #D0D09B;
-  text-decoration: none;
-}*/
-/*h2 a { color: #111111; }
-h2 a:hover {
-  color: #e50053;
-  text-decoration: none;
-}
-h3 a { color: #111111; }
-h3 a:hover {
-  color: #e50053;
-  text-decoration: none;
-}
-h4 a { color: #111111; }
-h4 a:hover {
-  color: #e50053;
-  text-decoration: none;
-}
-h5 a { color: #111111; }
-h5 a:hover {
-  color: #e50053;
-  text-decoration: none;
-}
-h6 a { color: #111111; }
-h6 a:hover {
-  color: #e50053;
-  text-decoration: none;
-}*/
 code, pre {
   font-family: Consolas, Monaco, "Courier New", monospace;
   font-size: 12px;
   line-height: 21px;
 }
 p code {
-  /*border: 1px solid #cccccc;
-  background-color: #fafafa;
-  padding: 1px 3px;*/
   white-space: nowrap;
   font-size: 1em;
 }
@@ -95,7 +62,6 @@ blockquote p:last-child { margin-bottom: 0; }
 
 .section-title {
     color: #BFBF8A;
-	/*margin-bottom: 0;*/
 	border-bottom: 1px solid #30403B;
 }
 .section-title a {
@@ -106,7 +72,6 @@ h3.section-title {
 }
 
 div#entry-list {
-	/*padding-top: 1em;*/
     padding-bottom: 1em;
 }
 div#entry-list h3 {
@@ -114,32 +79,6 @@ div#entry-list h3 {
 }
 div#entry-list p {
     color: #8B9976;
-}
-
-div#activity-list {
-  font-size: 1em;
-  line-height: 1em;
-  margin-left: 0em;
-  color: #30403B;
-  /*padding-top: 1em;*/
-}
-div#activity-list ul a {
-color: #8B9976;
-}
-div#activity-list ul { list-style: none; }
-div#activity-list ul li {
-  margin: 0 0 0.7em 0;
-}
-div#activity-list ul li img {
-  float: left;
-  padding: 0 0.5em 0 0;
-}
-div#activity-list ul li span.time {
-  font-size: 0.8em;
-  line-height: 1em;
-  margin-left: 0.5em;
-  font-weight: normal;
-  color: #30403B;
 }
 
 div.indicator {
@@ -162,7 +101,6 @@ span.time a:hover {
 
 div#entry-body {
     font: 100% Palatino,Georgia,"Times New Roman",Times,serif;
-    /*font:1em/1.625em "lucida grande","lucida sans unicode", sans-serif;*/
     font-size-adjust:none;
     font-style:normal;
     font-variant:normal;
@@ -175,10 +113,6 @@ div#entry-body p {
     line-height: 1.6em;
 }
 
-div#entry-body p + p {
-    /*text-indent:1.625em;*/
-}
-
 div#entry-body h3 {
     color: #BFBF8A;
     font-size: 1.4em;
@@ -189,33 +123,6 @@ div#entry-body p img       { float: left; margin: 0.5em 0.8125em 0.8125em 0; pad
 div#entry-body p img.right { float: right; margin: 0.5em  0 0.8125em 0.8125em }
 
 div#entry-body ol { font-size: 16px }
-
-/*.leftContent {
-    width: 40em;
-}
-.rightContent {
-    width: 14em;
-}
-
-#sidebar p {
-    margin: 0;
-}
-#sidebar ul {
-    list-style: none;
-}
-#sidebar ul li {
-    margin: 0;
-}
-
-.fRight {
-    float: right;
-}
-img.fRight {
-    padding: 25px;
-}
-.fLeft {
-    float: left;
-}*/
 
 .caps {
     font-size: 0.92em;
@@ -232,13 +139,6 @@ div#header-container {
     margin-bottom: 30px;
 }
 
-/*@font-face {
-    font-family: 'Goudy Bookletter';
-    src: url('GoudyBookletter1911.otf');
-    font-weight: normal;
-    font-style: normal;
-}*/
-
 .top a {
     color: #FFFFFF; /*#BFBF8A;*/
 }
@@ -252,18 +152,14 @@ div#header-container {
     font-size: 28px; /*25px;*/
     margin: 0 auto;
     padding: 8px 0;
-    /*overflow: visible;
-    white-space: nowrap;
-    text-decoration: none;*/
 }
 .top header {
-float: left;
-/*font-family: 'OFL Sorts Mill Goudy', 'OFL Sorts Mill Goudy TT', serif;*/
-text-transform: lowercase;
+    float: left;
+    text-transform: lowercase;
 }
 
 .top nav {
-    color: #A20A0A; /*#7B3008;*/
+    color: #A20A0A;
     text-align: right;
     float: right;
 }
@@ -271,30 +167,12 @@ text-transform: lowercase;
     margin-left: 20px;
 }
 
-
-
-/*#navbar {
-    width: 38em;
-    text-align: right;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	display: inline-block;
-	font-size: 2em;
-	line-height: 1.2em;
-}
-#navbar li {
-	float: left;
-    margin: 0 0 0 1em;
-}*/
-
 .landing {
-color: #222;
-font: normal normal normal 26px/32px 'OFL Sorts Mill Goudy TT', serif;
-width:650px;
-text-align:center;
-/*border-bottom: 1px solid #DDD;*/
-margin-bottom:60px;
+    color: #222;
+    font: normal normal normal 26px/32px 'OFL Sorts Mill Goudy TT', serif;
+    width:650px;
+    text-align:center;
+    margin-bottom:60px;
 }
 .landing p {
 margin-bottom:40px;
@@ -309,7 +187,6 @@ margin-bottom:40px;
 
 .entry-list ol li {
     float: left;
-    /*min-height: 300px;*/
     margin: 0px;
     text-align: center;
     width: 300px;
@@ -326,25 +203,22 @@ margin-bottom:40px;
 }
 
 .entry-list ol li a {
-color: #222;
-display: block;
-font: normal normal normal 26px/32px 'OFL Sorts Mill Goudy TT', serif;
-letter-spacing: -0.05em;
+    color: #222;
+    display: block;
+    font: normal normal normal 26px/32px 'OFL Sorts Mill Goudy TT', serif;
+    letter-spacing: -0.05em;
 }
 .entry-list ol li a:hover {
-    color: #B31B1B; /*#8C4119;*/
+    color: #B31B1B;
 }
 
 .entry-list ol li span.snip {
-color: #444;
-/*font-family: 'Goudy Bookletter', 'Vollkorn', serif;*/
-font-size: 16px;
-/*font-style: italic;*/
-/*line-height: 25px;*/
+    color: #444;
+    font-size: 16px;
 }
 .bordertop {
-border-top: 1px solid #999999;
-margin-top: 10px;
+    border-top: 1px solid #999999;
+    margin-top: 10px;
 }
 
 .footer {
