--- a/layout/base.j2
+++ b/layout/base.j2
@@ -7,9 +7,9 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>{{ author.name }} | {{ resource.meta.title }}</title>
     <link rel="alternate" type="application/rss+xml" title="Latest blog entries" href="/feeds/latest/" />
-    <link rel="stylesheet" href="{{ media_url('css/aal.css') }}" type="text/css" media="screen" charset="utf-8" />
-    <link rel="stylesheet" href="{{ media_url('css/base.css') }}" type="text/css" media="screen" charset="utf-8" />
-    <meta name="description" content="Personal blog of Dan Carroll, a developer based in Cambridge. Topics include C#, Python, Django, and gaming." />
+    <link rel="stylesheet" href="{{ media_url('css/aal.css') }}" type="text/css" media="screen" />
+    <link rel="stylesheet" href="{{ media_url('css/base.css') }}" type="text/css" media="screen" />
+    <meta name="description" content="Personal blog of Dan Carroll, a developer based in Massachusetts. Topics include C#, Python, Django, and gaming." />
 
     {% block extrahead %}{% endblock %}
 
