--- a/layout/flatpage.j2
+++ b/layout/flatpage.j2
@@ -1,8 +1,8 @@
 {% extends "base.j2" %}
 
 {% block content %}
-<h1>{{ resource.meta.title }}</h1>
-{% filter markdown -%}
+<h1>{{ resource.meta.title|typogrify }}</h1>
+{% filter markdown|typogrify -%}
 {% block text %}{% endblock %}
 {%- endfilter %}
 {% endblock %}
