--- a/layout/base.j2
+++ b/layout/base.j2
@@ -27,10 +27,10 @@
             </header>
             
             <nav>
-		<a href="{{ blog.url }}">{{ blog.name }}</a>
-		<a href="{{ projects.url }}">{{ projects.name }}</a>
-		<a href="{{ about.url }}">{{ about.name }}</a>
-		<a href="/feeds/latest.xml">feed</a>
+		<a href="{{ blog.url }}">{{ blog.name|lower }}</a>
+		<a href="{{ projects.url }}">{{ projects.name|lower }}</a>
+		<a href="{{ about.url }}">{{ about.name|lower }}</a>
+		<a href="{{ feed.url }}">{{ feed.name|lower }}</a>
             </nav>
         </div>
     </div>
