--- a/content/media/css/base.css
+++ b/content/media/css/base.css
@@ -5,7 +5,7 @@
 */
 
 body {
-  font-family: 'Palatino Linotype', sans-serif;
+  font-family: Palatino,"Palatino Linotype",serif;
   color: #000000;
   background: #FFFFFF;
   /*border-top: 4px solid #8C4119;*/
@@ -147,7 +147,7 @@ div#header-container {
 }
 .top {
     width: 650px;
-    font-family: 'OFL Sorts Mill Goudy TT';
+    font-family: "OFL Sorts Mill Goudy TT",serif;
     letter-spacing: -0.05em;
     font-size: 28px; /*25px;*/
     margin: 0 auto;
@@ -169,7 +169,7 @@ div#header-container {
 
 .landing {
     color: #222;
-    font: normal normal normal 26px/32px 'OFL Sorts Mill Goudy TT', serif;
+    font: normal normal normal 26px/32px "OFL Sorts Mill Goudy TT", serif;
     width:650px;
     text-align:center;
     margin-bottom:60px;
@@ -205,7 +205,7 @@ margin-bottom:40px;
 .entry-list ol li a {
     color: #222;
     display: block;
-    font: normal normal normal 26px/32px 'OFL Sorts Mill Goudy TT', serif;
+    font: normal normal normal 26px/32px "OFL Sorts Mill Goudy TT", serif;
     letter-spacing: -0.05em;
 }
 .entry-list ol li a:hover {
@@ -231,18 +231,18 @@ margin-bottom:40px;
 }
 
 .symbols {
-    font-family: Segoe UI Symbol, Symbola;
+    font-family: "Segoe UI Symbol", Symbola;
     color: #B31B1B;
 }
 
 /* Entry body */
 body h1, body h2, body h3, body h4, body h5, body h6 {
-    font-family: 'OFL Sorts Mill Goudy TT', serif;
+    font-family: "OFL Sorts Mill Goudy TT", serif;
     font-weight: normal;
     color: #222222;
 }
 body h1 a, body h2 a, body h3 a, body h4 a, body h5 a, body h6 a {
-    font-family: 'OFL Sorts Mill Goudy TT', serif;
+    font-family: "OFL Sorts Mill Goudy TT", serif;
     font-weight: normal;
     color: #222222;
 }
