--- a/layout/listing_tag.j2
+++ b/layout/listing_tag.j2
@@ -1,16 +1,12 @@
 {% extends "base.j2" %}
+{% from "macros.j2" import render_listing_item with context %}
 
 {% block content %}
 <h1>Tagged with '{{ resource.meta.title }}'</h1>
 <div class="entry-list">
     <ol class="group">
         {% for res in resource.node.walk_resources_tagged_with(resource.meta.title) %}
-{% if res.meta.listable %}
-        <li>
-            <a href="{{ content_url(res.url) }}">{{ res.meta.title }}</a>
-            <div class="bordertop"><span class="snip">{{ res.meta.description }}</span></div>
-        </li>
-{% endif %}
+	  {{ render_listing_item(res) }}
         {% endfor %}
     </ol>
 </div>
