--- a/layout/atom_tag.j2
+++ b/layout/atom_tag.j2
@@ -18,6 +18,7 @@
     <id>{{ author.url }}{{ resource.full_url }}</id>
 
     {% for res in site.content.walk_resources_tagged_with(resource.meta.title) %}
+        {% if loop.index > 5 %}{% break %}{% endif %}
         {% if res.meta.listable %}
         <entry>
             <title type="html">{{ res.meta.title }}</title>
