--- a/layout/listing_tag.j2
+++ b/layout/listing_tag.j2
@@ -1,6 +1,10 @@
 {% extends "base.j2" %}
 {% from "macros.j2" import render_listing_item with context %}
 
+{% block extrahead %}
+<link rel="alternate" type="application/rss+xml" title="Latest blog entries tagged '{{ resource.meta.title }}'" href="{{ tagfeed.url }}{{ resource.meta.title }}/" />
+{% endblock %}
+
 {% block content %}
 <h1>Tagged with '{{ resource.meta.title }}'</h1>
 <div class="entry-list">
