--- a/layout/macros.j2
+++ b/layout/macros.j2
@@ -14,7 +14,7 @@
 
 {% if res.meta.listable %}
 <entry>
-    <title type="html">{{ res.meta.title }}</title>
+    <title type="html">{{ res.meta.title|forceescape }}</title>
     <author><name>{{ author.name }}</name></author>
     <link href="{{ author.url }}{{ content_url(res.url) }}"/>
     <updated>{{ res.meta.created|xmldatetime }}</updated>
