--- a/content/media/css/base.css
+++ b/content/media/css/base.css
@@ -128,10 +128,6 @@ div#entry-body ol { font-size: 16px }
     font-size: 0.92em;
 }
 
-div#comments {
-    margin-top: 3em;
-}
-
 
 /* NEW STUFF */
 div#header-container {
@@ -219,6 +215,11 @@ margin-bottom:40px;
 .bordertop {
     border-top: 1px solid #999999;
     margin-top: 10px;
+}
+
+#comments {
+    border-top: 1px solid #DDD;
+    padding: 20px 0 10px 0;
 }
 
 .footer {
